# leaf_dev

./: .gitignore  .rustfmt.toml  Cargo.toml  README.md  leaf_config.toml  leaf_config_default.toml  leafc_config.toml  pyproject.toml  rust-toolchain.toml
common/: Cargo.toml
common/src/: answers.rs  building.rs  conc_loop.rs  config.rs  directed.rs  ffi.rs  lib.rs  logging.rs  pri.rs  program_dep.rs  rkyving.rs  serdes.rs  serdex.rs  tyexp.rs  type_info.rs  types.rs  utils.rs
common/src/pri/: defs.rs  mod.rs  refs.rs  tags.rs  types.rs
common/src/z3/: mod.rs  node.rs  serdes.rs  solve.rs
compiler/: Cargo.toml  build.rs
compiler/src/: config.rs  lib.rs  main.rs  pass.rs  pri_utils.rs  toolchain_build.rs  utils.rs  visit.rs
compiler/src/mir_transform/: instr.rs  jump.rs  misc.rs  mod.rs  modification.rs  split.rs
compiler/src/mir_transform/call_addition/: context.rs  mod.rs  pri_utils.rs
compiler/src/mir_transform/instr/: passes.rs
compiler/src/mir_transform/instr/call/: context.rs  mod.rs
compiler/src/mir_transform/instrumentation/: mod.rs  passes.rs
compiler/src/mir_transform/instrumentation/call/: context.rs  mod.rs
compiler/src/passes/: codegen.rs  ctfe.rs  instr.rs  logger.rs  mod.rs  noop.rs  null.rs  observation.rs  p_map_exp.rs  program_dep.rs  runtime_adder.rs  tyexp.rs  type_info.rs
compiler/src/passes/instr/: config.rs  counter.rs  decision.rs  mod.rs  pri_utils.rs  rec_check.rs  utils.rs
compiler/src/passes/instr/call/: context.rs  mod.rs
compiler/src/passes/instr/decision/: intrinsics.rs  mod.rs  rules.rs
compiler/src/utils/: control_dependence.rs  mod.rs
compiler/tests/: driver.rs
integration/libafl/examples/basic_pro_conc/fuzz/: Cargo.toml
integration/libafl/fuzzers/pure_concolic/: Cargo.toml
integration/libafl/fuzzers/pure_concolic/src/: main.rs
integration/libafl/fuzzers/pure_concolic_dir_sync/: Cargo.toml
integration/libafl/fuzzers/pure_concolic_dir_sync/src/: main.rs  utils.rs
integration/libafl/lib/: Cargo.toml
integration/libafl/lib/src/: lib.rs  mutation.rs  stage.rs
integration/libafl/libfuzzer/: Cargo.toml  README.md  build.rs
integration/libafl/libfuzzer/runtime/: Cargo.toml.template
integration/libafl/libfuzzer/runtime/src/: concolic.rs  lib.rs  merge.rs  misc.rs  options.rs
integration/libafl/libfuzzer/src/: lib.rs
leafrt/: Cargo.toml
leafrt/src/: assign.rs  expression.rs  lib.rs  utils.rs
orchestrator/: Cargo.toml  build.rs
orchestrator/src/: args.rs  lib.rs  logging.rs  main.rs  utils.rs
orchestrator/src/modes/: div_path.rs  mod.rs  onetime.rs  pure_loop.rs
orchestrator/src/modes/directed/: main.rs  outgen.rs  reachability.rs  scoring.rs  solve.rs  trace.rs  two_level.rs  utils.rs
orchestrator/src/modes/directed/reachability/: calc.rs  lazy_optimized.rs  mod.rs  zero_des.rs
rc0/: Cargo.toml
rc0/examples/array_assign/: main.rs
rc0/examples/const_mul/: main.rs
rc0/examples/fn_const_generic/: main.rs
rc0/examples/multi_ref_assign/: main.rs
rc0/src/: helpers.rs  lib.rs  main.rs  transformer.rs
rc0/tests/: integration_tests.rs
rc0/tests/test_cases/: test0.rs  test1.rs  test2.rs
rc0/tests/test_fixtures/rvalue/: addressof.rs  checkedbinaryop.rs  len.rs
runtime/: Cargo.toml  build.rs
runtime/flavors/: ffi_template.rs  shared_build.rs
runtime/flavors/basic/: Cargo.toml  build.rs
runtime/flavors/basic/src/: lib.rs
runtime/flavors/basic_li/: Cargo.toml
runtime/flavors/basic_li/src/: lib.rs
runtime/flavors/basic_li_no_implicit/: Cargo.toml  build.rs  src
runtime/flavors/cf_tracer/: Cargo.toml
runtime/flavors/cf_tracer/src/: lib.rs
runtime/flavors/noop/: Cargo.toml
runtime/flavors/noop/src/: lib.rs
runtime/lib/: Cargo.toml
runtime/lib/src/: lib.rs
runtime/lib/src/abs/: backend.rs  fmt.rs  mod.rs  place.rs  serdes.rs  utils.rs
runtime/lib/src/abs/expr/: chained.rs  composite.rs  logger.rs  macros.rs  mod.rs  proj.rs  sym_place.rs  variance.rs
runtime/lib/src/backends/: mod.rs
runtime/lib/src/backends/basic/: alias.rs  annotation.rs  assignment.rs  call.rs  concrete.rs  config.rs  constraint.rs  dependence.rs  implication.rs  instance.rs  memory.rs  mod.rs  operand.rs  outgen.rs  place.rs  sym_vars.rs  trace.rs  type_info.rs  types.rs
runtime/lib/src/backends/cf_tracer/: call.rs  constraint.rs  instance.rs  mod.rs  (+2 more)
runtime/lib/src/call/: mod.rs
runtime/lib/src/outgen/: mod.rs
runtime/lib/src/pri/: ffi.rs  fluent.rs  late_init.rs  mod.rs  noop.rs  refs.rs
runtime/lib/src/solvers/: map.rs  mod.rs  z3.rs
runtime/lib/src/trace/: adapt.rs  agg.rs  coverage.rs  divergence.rs  dump.rs  filter.rs  immediate.rs  inspect.rs  log.rs  logger.rs  mod.rs  noop.rs  sanity_check.rs
runtime/lib/src/tyexp/: mod.rs
runtime/lib/src/type_info/: mod.rs
runtime/lib/src/utils/: alias.rs  file.rs  logging.rs  meta.rs  mod.rs  serdes.rs
runtime/shim/: Cargo.toml
runtime/shim/src/: annotations.rs  lib.rs
runtime/shim/src/annotations/: mod.rs
runtime/shim/src/pri/: compiler_helpers.rs  mod.rs
runtime/src/: interface.rs  lib.rs  notes.rs  runtime.rs
runtime/src/abs/: backend.rs  fmt.rs  mod.rs  place.rs
runtime/src/abs/expr/: chained.rs  composite.rs  macros.rs  mod.rs  proj.rs  sym_place.rs  variance.rs
runtime/src/annotations/: mod.rs
runtime/src/backends/: fake.rs  mod.rs
runtime/src/backends/basic/: alias.rs  call.rs  config.rs  mod.rs  operand.rs  place.rs  state.rs
runtime/src/ffi/: mod.rs
runtime/src/outgen/: mod.rs
runtime/src/pathics/: mod.rs
runtime/src/pri/: ffi_template.rs  instance.rs  mod.rs  noop.rs  utils.rs
runtime/src/pri/basic/: instance.rs  mod.rs
runtime/src/pri/default/: mod.rs
runtime/src/solvers/: z3.rs
runtime/src/trace/: mod.rs
runtime/src/tyexp/: instance.rs  mod.rs
runtime/src/utils/: alias.rs  logging.rs  meta.rs  mod.rs
solver/: Cargo.toml  README.md
solver/src/: lib.rs
solver/src/backend/: mod.rs
solver/src/backend/z3/: mod.rs  node.rs  serdes.rs  solve.rs
solver/test_data/: hello_world_simple.jsonl  is_sorted_complex.jsonl
solver/tests/: basic.rs  binary_integration.rs  samples.rs
(+492 files in other folders)
