[workspace]
resolver = "2"
members = [
    "common",
    "compiler",
    "runtime/lib",
    "runtime/flavors/*",
    "integration/libafl/lib",
    "integration/libafl/libfuzzer",
    "integration/libafl/fuzzers/pure_concolic",
    "macros",
    "orchestrator",
]
exclude = ["runtime/shim", "integration/libafl/fuzzers/*", "samples/crates/", "scripts"]

[workspace.dependencies]
# Unless we specify the package, it won't be renamed.
common = { path = "common", package = "common" }
macros = { path = "macros" }
runtime_basic_li = { path = "runtime/flavors/basic_li" }
runtime_noop = { path = "runtime/flavors/noop" }
libafl_leaf = { path = "integration/libafl/lib" }

clap = { version = "4.5", features = ["derive"] }
config = "0.14.1"
const_format = "0.2.33"
delegate = "0.13.1"
derive_more = { version = "1.0.0", features = ["full"] }
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = { version = "1.0.215", features = ["derive"] }

libafl = { git = "https://github.com/sfu-rsl/LibAFL", tag = "0.14.1", features = ["std"]}
libafl_bolts = { git = "https://github.com/sfu-rsl/LibAFL", tag = "0.14.1" }
libafl_targets = { git = "https://github.com/sfu-rsl/LibAFL", tag = "0.14.1" }