[package]
name = "common"
version = "0.1.0"
edition = "2021"

[lib]
name = "leafcmn"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
std = []
logging = ["dep:tracing"]
serde = ["dep:serde"]
tyexp = ["std", "serde", "dep:serde_json", "logging"]
config = ["std", "dep:config", "logging"]
directed = ["std", "serde", "dep:serde_json"]
trace_types = ["std"]
z3 = ["std", "trace_types", "dep:z3", "dep:z3-sys"]

[dependencies]
# No dependencies are supposed to be used by this crate in the mode that is used by the shim library.

derive_more = { workspace = true, default-features = false, features = [
    "full",
] }
serde = { workspace = true, optional = true }
serde_json = { workspace = true, optional = true }
log = { version = "0.4.20", optional = true }
config = { workspace = true, optional = true }
tracing = { version = "0.1", optional = true, features = [
    "release_max_level_info",
] }
z3 = { workspace = true, optional = true }
z3-sys = { workspace = true, optional = true }

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = [
    'cfg(place_addr)',
    'cfg(abs_concrete)',
    'cfg(core_build)',
] }
