[package]
name = "common"
version = "0.1.0"
edition = "2021"

[lib]
name = "leafcmn"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
std = []
logging = ["dep:tracing"]
serde = ["dep:serde"]
type_info = ["std"]
type_info_rw = ["type_info", "rkyv", "serde", "dep:serde_json", "logging"]
config = ["std", "dep:config", "logging"]
directed = ["std", "serde", "dep:serde_json"]
trace_types = ["std", "dep:derive_more"]
z3 = [
    "std",
    "trace_types",
    "unsafe_wrappers",
    "dep:z3",
    "dep:z3-sys",
    "dep:delegate",
]
answers = ["std"]
rkyv = ["dep:rkyv"]
unsafe_wrappers = ["dep:derive_more"]
conc_loop = ["std"]
building = ["std"]

[dependencies]
# No dependencies are supposed to be used by this crate in the mode that is used by the shim library.
# Take it seriously even if the dependency is no_std-compatible.

delegate = { workspace = true, optional = true }
derive_more = { workspace = true, optional = true, default-features = false, features = [
    "full",
] }
serde = { workspace = true, optional = true }
serde_json = { workspace = true, optional = true }
rkyv = { workspace = true, optional = true }
log = { version = "0.4.20", optional = true }
config = { workspace = true, optional = true }
tracing = { version = "0.1", optional = true, features = [
    "release_max_level_info",
] }
z3 = { workspace = true, optional = true }
z3-sys = { workspace = true, optional = true }

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = [
    'cfg(place_addr)',
    'cfg(abs_concrete)',
    'cfg(core_build)',
] }
