[package]
name = "compiler"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "leafc"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dev-dependencies]
ignore = "0.4.22"


[dependencies]
common = { path = "../common", features = ["tyexp", "config", "logging"] }
macros = { path = "../macros" }

delegate = "0.12.0"
paste = "1.0"
bimap = "0.6.3"
derive_more = "0.99.11"
const_format = "0.2.32"
glob = "0.3.1"
config = "0.14.0"
serde = { version = "1.0.188", features = ["derive"] }
ron = "0.8"
bitflags = "2.6.0"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[package.metadata.rust-analyzer]
rustc_private = true

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = [
    'cfg(place_addr)',
    'cfg(abs_concrete)',
] }
