[package]
name = "compiler"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "leafc"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dev-dependencies]
ignore = "0.4.22"


[dependencies]
common = { workspace = true, features = ["tyexp", "config", "logging"] }
macros = { workspace = true }
# Adding runtime flavors as dependencies, so they will be built along with the compiler.
runtime_basic_li = { workspace = true }
runtime_noop = { workspace = true }

delegate = { workspace = true }
paste = "1.0"
bimap = "0.6.3"
derive_more = { workspace = true }
const_format = { workspace = true }
glob = "0.3.1"
config = { workspace = true }
serde = { workspace = true }
ron = "0.8"
bitflags = "2.6.0"
tracing-subscriber = { workspace = true }

[package.metadata.rust-analyzer]
rustc_private = true

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = [
    'cfg(place_addr)',
    'cfg(abs_concrete)',
] }
