[package]
name = "compiler"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "leafc"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dev-dependencies]
ignore = "0.4.22"

[build-dependencies]
common = { workspace = true, features = ["building"] }

[dependencies]
common = { workspace = true, features = [
    "type_info",
    "type_info_rw",
    "config",
    "logging",
    "directed",
    "program_dep",
] }
macros = { workspace = true }
# Adding runtime flavors as dependencies, so they will be built along with the compiler.
runtime_basic_li = { workspace = true }
runtime_basic_li_no_implicit = { workspace = true }
runtime_noop = { workspace = true }

delegate = { workspace = true }
paste = "1.0"
bimap = "0.6.3"
derive_more = { workspace = true }
const_format = { workspace = true }
glob = "0.3.1"
itertools = { workspace = true }
config = { workspace = true }
serde = { workspace = true }
ron = "0.8"
regex-lite = "0.1"
bitflags = "2.6.0"
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
smallvec = "1.15.0"

[package.metadata.rust-analyzer]
rustc_private = true

[features]
default = ["abs_concrete"]
abs_concrete = []
