[package]
name = "leafrt"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.9.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
leafcommon = { path = "../leafcommon", version = "0.1.0" }

[package.metadata.rust-analyzer]
rustc_private = true
