[package]
name = "orchestrator"
version = "0.1.0"
edition = "2021"

[lib]
name = "orchestrator"

[[bin]]
name = "leafo_pure"
path = "src/modes/pure_loop.rs"

[[bin]]
name = "leafo_onetime"
path = "src/modes/onetime.rs"

[[bin]]
name = "leafo_directed"
path = "src/modes/directed/main.rs"
edition = "2024"

[build-dependencies]
build_common = { workspace = true }

[dependencies]
common = { workspace = true, features = [
    "logging",
    "config",
    "directed",
    "trace_types",
    "z3",
    "answers",
    "rkyv",
] }

tracing-subscriber = { workspace = true }
tracing = { workspace = true }
tracing-indicatif = "0.3.9"
sha2 = "0.10.8"
clap = { workspace = true }
derive_more = { workspace = true }
glob = "0.3.1"
notify = "8.0.0"
csv = "1.3"
serde = { workspace = true }
serde_json = { workspace = true }
bincode = { version = "2.0", features = ["serde"] }
z3 = { workspace = true }
tokio = { version = "1", features = ["io-std", "io-util", "process", "rt"] }
futures = "0.3.31"
rkyv = "0.8.10"
