[package]
name = "orchestrator"
version = { workspace = true }
edition = "2021"

[lib]
name = "orchestrator"


[[bin]]
name = "leafo_onetime"
path = "src/bin/onetime/main.rs"

[[bin]]
name = "leafo_directed"
path = "src/bin/directed/main.rs"
edition = "2024"

[build-dependencies]
common = { workspace = true, features = ["building"] }

[dependencies]
common = { workspace = true, features = [
    "logging",
    "config",
    "directed",
    "trace_types",
    "z3",
    "answers",
    "rkyv",
    "conc_loop",
    "serde",
] }

tracing-subscriber = { workspace = true, features = ["json"] }
tracing = { workspace = true }
tracing-indicatif = "0.3.9"
tracing-tree = { workspace = true, features = ["time"] }
sha2 = "0.10.8"
clap = { workspace = true }
derive_more = { workspace = true }
glob = "0.3.1"
notify = "8.0.0"
csv = "1.3"
serde = { workspace = true }
serde_json = { workspace = true }
bincode = { version = "2.0", features = ["serde"] }
z3 = { workspace = true }
tokio = { version = "1", features = ["io-std", "io-util", "process", "rt"] }
futures = "0.3.31"
rkyv = { workspace = true }
disjoint = "0.8.0"
itertools = { workspace = true }
