[package]
name = "orchestrator"
version = { workspace = true }
edition = "2024"

[lib]
name = "orchestrator"


[[bin]]
name = "leafo_onetime"
path = "src/bin/onetime/main.rs"

[[bin]]
name = "leafo_directed"
path = "src/bin/directed/main.rs"

[[bin]]
name = "leafo_fuzzer_comp"
path = "src/bin/fuzzer-comp/main.rs"

[build-dependencies]
common = { workspace = true, features = ["building"] }

[dependencies]
common = { workspace = true, features = [
    "logging",
    "config",
    "directed",
    "trace_types",
    "z3",
    "answers",
    "rkyv",
    "conc_loop",
    "serde",
    "serde_json",
    "bincode",
] }

tracing-subscriber = { workspace = true, features = ["json"] }
tracing = { workspace = true }
tracing-indicatif = "0.3.9"
tracing-tree = { workspace = true, features = ["time"] }
sha2 = "0.10.8"
clap = { workspace = true }
derive_more = { workspace = true }
glob = { workspace = true }
notify = "8.0.0"
csv = "1.3"
serde = { workspace = true }
serde_json = { workspace = true }
bincode = { version = "2.0", features = ["serde"] }
z3 = { workspace = true }
tokio = { version = "1", features = [
    "fs",
    "io-std",
    "io-util",
    "process",
    "rt",
    "rt-multi-thread",
    "macros",
    "sync",
    "signal",
] }
tokio-stream = { version = "0.1.17", features = ["fs"] }
futures = "0.3.31"
rkyv = { workspace = true }
disjoint = "0.8.0"
itertools = { workspace = true }
indicatif = "0.18.0"
console = "0.16.0"
