[package]
name = "rc0"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.14"
env_logger = "0.9.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rc0lib = { path = "../rc0lib" }

[dev-dependencies]
env_logger = "0.9.0"
test-log = "0.2.8"
