[package]
name = "runtime"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.17"
env_logger = "0.10.0"
paste = "1.0"
z3 = { version = "0.11.2" }
lazy_static = "1.4.0"
delegate = "0.10.0"
deref-derive = "0.1.0"