[package]
name = "runtime"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "leafrt"
crate-type = ["cdylib"]

[dependencies]
common = { path = "../common", features = ["tyexp"] }

config = "0.13.4"
log = "0.4.17"
env_logger = "0.10.0"
paste = "1.0"
z3 = { version = "0.12.1" }
lazy_static = "1.4.0"
delegate = "0.12.0"
derive_more = "0.99.11"
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"
