[package]
name = "runtime"
version = { workspace = true }
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "leafrt"
crate-type = ["rlib"]

[profile.release]
debug = true


[dependencies]
common = { workspace = true, features = [
    "type_info",
    "type_info_rw",
    "config",
    "logging",
    "trace_types",
    "z3",
    "answers",
    "directed",
    "program_dep",
] }
leaf_macros = { path = "../../macros", package = "macros" }

config = { workspace = true, features = ["toml", "json"] }
tracing-subscriber = { workspace = true }
tracing = { workspace = true }
paste = "1.0"
z3 = { workspace = true }
z3-sys = { workspace = true }
delegate = { workspace = true }
derive_more = { workspace = true }
itertools = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing-tree = { workspace = true }
chrono = "0.4.38"
const_format = { workspace = true }
tracing-flame = { version = "0.2.0", optional = true }
# Refer to the compatibility table in their repository. The semantic versioning does not seems to be reliable.
tracing-tracy = { version = "=0.11.2", optional = true }
tracy-client = { version = "=0.17.3", optional = true }
tracy-client-sys = { version = "=0.24.0", optional = true }
clippy-tracing-attributes = "0.1.0"
cfg-if = { version = "1.0" }


[lints.rust]

[features]
default = []
release_sym_value_loss_checks = []

implicit_flow = []

runtime_access_raw_ptr = []
runtime_access_mutex = []

profile_flame = ["dep:tracing-flame"]
profile_tracy = ["dep:tracing-tracy"]
profile_full = ["profile_flame", "profile_tracy"]
