[package]
name = "runtime_shim"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "leafrtsh"
crate-type = ["rlib"]

[dependencies]
# No dependencies other than the internal packages are supposed to be used by this crate.
common = { path = "../../common" }
