[package]
name = "runtime_shim"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "leafrtsh"
crate-type = ["rlib"]
# NOTE: Although there is no test for this crate yet, we explicitly disable 
# testing for it, to prevent errors due to possibly missing `libleafrt.so` file.
# Compiler takes care of providing `libleafrt.so` file when building target
# programs.
# Fix it when we have tests for this crate.
test = false

[dependencies]
# No dependencies other than the internal packages are supposed to be used by this crate.
common = { path = "../../common" }

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(core_build)'] }
