[package]
name = "runtime_basic_li"
version = { workspace = true }
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "leafrt_basic_li"
crate-type = ["cdylib"]

[dependencies]
common = { workspace = true }
runtime = { path = "../../lib", features = ["implicit_flow"] }
