[package]
name = "runtime_noop"
version = { workspace = true }
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "leafrt_noop"
crate-type = ["cdylib"]

[dependencies]
common = { workspace = true }
runtime = { path = "../../lib" }
