[package]
name = "pure_concolic"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "leaff_pure_conc"
path = "src/main.rs"

[features]
default = []
tui = ["libafl/tui_monitor"]

[dependencies]
common = { workspace = true, features = ["logging"]}

libafl = { workspace = true, features = ["std", "prelude", "errors_backtrace"] }
libafl_bolts = { workspace = true }
libafl_leaf = { workspace = true, features = ["errors_backtrace"]}

clap = { workspace = true, features = ["derive"] }
tracing-subscriber = { workspace = true }
tracing-log = "0.2.0"
