[package]
name = "pure_concolic_dir_sync"
license.workspace = true
edition.workspace = true
version.workspace = true

[[bin]]
name = "leaff_pure_conc_dir_sync"
path = "src/main.rs"

[features]
default = []
tui = ["libafl/tui_monitor"]

[dependencies]
common = { workspace = true, features = ["logging"] }

libafl = { workspace = true, features = [
    "std",
    "prelude",
    "errors_backtrace",
    "serdeany_autoreg",
] }
libafl_bolts = { workspace = true }
libafl_leaf = { workspace = true, features = ["errors_backtrace"] }

clap = { workspace = true, features = ["derive"] }
tracing-subscriber = { workspace = true }
tracing-log = "0.2.0"
serde = { workspace = true }
