[package]
name = "basic_pro_conc-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = { workspace = true }
basic_pro_conc = { path = ".." }

[[bin]]
name = "fuzz_target"
path = "fuzz_targets/fuzz_target.rs"
test = false
doc = false
bench = false
